[package]
name = "balancebeam"
version = "0.1.0"
authors = ["Ryan Eberhardt <reberhardt7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
httparse = "1.3.6"
http = "0.2.4"
log = "0.4.14"
env_logger = "0.8.3"
pretty_env_logger = "0.4.0"
threadpool = "1.8.1"
tokio = { version = "1.4.0", features = ["full"] }
rand = "0.8.3"
parking_lot = "0.11.1"

[dev-dependencies]
nix = "0.20.0"
hyper = { version = "0.14.5", features = ["full"] }
reqwest = "0.11.2"
async-trait = "0.1.48"
